Introduce “Net Tester” for Unit Tests. Actualise unit test for And/Or/Buffer.